--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>CG Learning</h1>
         <p>implementations of computer graphics algorithms</p>
+        <ul>
+            <li><a href="001_catmull_rom/index.html">Catmull-Rom Spline</a></li>
     </body>
 </html>
