--- a/001_catmull_rom/index.html
+++ b/001_catmull_rom/index.html
@@ -3,9 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>catmull-rom spline</title>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
+        <script src="catmull_rom.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Catmull-Rom Spline</h1>
-        <p>hoge</p>
+        <!-- <h1>Catmull-Rom Spline</h1>
+        <canvas
+            id="canvas"
+            width="640"
+            height="480"
+            style="border: 1px solid #000000"
+        ></canvas>
+        <p>説明を書く</p> -->
     </body>
 </html>
