--- a/001_catmull_rom/index.html
+++ b/001_catmull_rom/index.html
@@ -8,13 +8,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <!-- <h1>Catmull-Rom Spline</h1>
-        <canvas
-            id="canvas"
-            width="640"
-            height="480"
-            style="border: 1px solid #000000"
-        ></canvas>
-        <p>説明を書く</p> -->
+        <h1>Catmull-Rom Spline</h1>
+        <p>
+            Naive implementation of Catmull-Rom Spline.<br>
+            The control points are always on the curve, but they are not the points<br>
+            where the curvature reaches extreme values, which might degrads the ux.
+        </p>
     </body>
 </html>
