--- a/001_catmull_rom/index.html
+++ b/001_catmull_rom/index.html
@@ -9,10 +9,11 @@
     </head>
     <body>
         <h1>Catmull-Rom Spline</h1>
+        <p>2024-08-01</p>
         <p>
             Naive implementation of Catmull-Rom Spline.<br>
             The control points are always on the curve, but they are not the points<br>
-            where the curvature reaches extreme values, which might degrads the ux.
+            where the curvature reaches extreme values, which might degrade the ux.
         </p>
     </body>
 </html>
