--- a/001_catmull_rom/index.html
+++ b/001_catmull_rom/index.html
@@ -13,7 +13,7 @@
         <p>
             Naive implementation of Catmull-Rom Spline.<br>
             The control points are always on the curve, but they are not the points<br>
-            where the curvature reaches extreme values, which might degrade the ux.
+            where the curvature reaches extreme values.
         </p>
     </body>
 </html>
