--- a/002_subdivision/index.html
+++ b/002_subdivision/index.html
@@ -5,15 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
     <script src="skech.js"></script>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <title>subdivision-surface</title>
+    <script src="subdivide.js"></script>
+    <script src="mesh.js"></script>
+    <title>catmull-clark</title>
 </head>
 <body>
-    <h1>Subdivision Surface</h1>
-    <p>.objファイルをパースして、p5jsでポリゴンを描画する部分まで作成。subdivisionの部分はまだ。</p>
-    <input type="file" id="fileInput">
+    <h1>Catmull-Clark Subdivision Surface</h1>
+    <p>
+        Catmull Clark法によるサブディビジョンサーフェスの実装<br/>
+        .objファイルをパースして読み込み、サブディビジョンをする処理を実装しました。<br/>
+        ボリゴンの描画にp5.jsを使用しています。
+    </p>
+    <input type="file" id="fileInput" accept=".obj">
     <pre id="output"></pre>
 
     <script src="parser.js"></script>
+    <button id="subdivideButton">subdivide</button>
+
 </body>
 </html>
