update top page

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <p>implementations of computer graphics algorithms</p>
         <ul>
             <li><a href="001_catmull_rom/index.html">Catmull-Rom Spline</a></li>
+            <li><a href="002_subdivision/index.html">Catmull-Clark Subdivision Surface</a></li>
     </body>
 </html>
